--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: eggster
 title: Home
 ---
 <div class="container">
-	<img src="assets/img/hotdog.png"><p>AAAAAAAAAAAA</p>
+	<img src="eggster.club/assets/img/hotdogpng.png"><p>AAAAAAAAAAAA</p>
 </div>
