--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@ layout: eggster
 title: Home
 ---
 <div class="container">
-   <img src="/assets/img/hotdog.png" class="home-hotdog">
-   <h1>Hotdogger</h1>
+   <img src="/assets/img/hotdog.png" class="home-hotdog"><h1>Hotdogger</h1>
 </div>
