--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
----
-layout: eggster
 title: Home
 ---
 <div class="container">
-   <img src="/assets/img/hotdog.png" class="home-hotdog"><h1>Hotdogger</h1>
-</div>
+<img src="/assets/img/hotdog.png">
+<p>AAAAAAAAAAAA</p>
+<img src="/assets/img/hotdog.png" class="home-hotdog">
+<p>AAAAAAAAAAAA</p>
