--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
----
-layout: eggster
-title: Home
----
-<div class="container">
-	<img src="/assets/img/hotdog.png" class="home-hotdog"><p>AAAAAAAAAAAA</p>
-</div>
+<!DOCTYPE html>
+<html>
+   ---
+   layout: eggster
+   title: Home
+   ---
+   <div class="container">
+      <img src="/assets/img/hotdog.png" class="home-hotdog">
+      <p>AAAAAAAAAAAA</p>
+   </div>
+</html>
