--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    ---
    <div class="container">
       <img src="/assets/img/hotdog.png" class="home-hotdog">
-      <p>AAAAAAAAAAAA</p>
+      <p>Hotdogger</p>
+      <p>if you manage to get this job, you will have to opearate one of our hotdog trucks. now it dosent sound that hard but trust me it is.</p>
    </div>
 </html>
