--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
+<!DOCTYPE html>
 <html>
----
-layout: eggster
-title: Home
----
-   <div class="container">
-      <img src="/assets/img/hotdog.png" class="home-hotdog">
-      <p>AAAAAAAAAAAA</p>
-   </div>
+--- layout: eggster title: Home ---
+<div class="container">
+    <img src="/assets/img/hotdog.png" class="home-hotdog">
+    <p>AAAAAAAAAAAA</p>
+</div>
+
 </html>
