--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html>
---- layout: eggster title: Home ---
+---
+layout: eggster
+title: Home
+---
 <div class="container">
-    <img src="/assets/img/hotdog.png" class="home-hotdog">
-    <p>AAAAAAAAAAAA</p>
+	<img src="/assets/img/hotdog.png" class="home-hotdog"><p>AAAAAAAAAAAA</p>
 </div>
-
-</html>
