Updated index.html lul

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: eggster
 title: Home
 ---
 <div class="container">
-	<img src="/assets/img/hotdog.png" class="home-hotdog"><p>AAAAAAAAAAAA</p>
+	<img src="/assets/img/hotdog.png" class="home-hotdog"><p>Hotdogger</p>
 </div>
