--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: eggster
 title: Home
 ---
-<middle>
+<center>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="8XUYPLBV8A7PC">
@@ -17,7 +17,7 @@ title: Home
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-</middle>
+</center>
 
 <div class="container">
 	<img src="/assets/img/PNGCOG.png" class="home-hotdog"><p>Hotdogger</p>
