--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ title: Home
 <center>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="8XUYPLBV8A7PC">
+<input type="hidden" name="hosted_button_id" value="VA35N8EN48KV2">
 <table>
-<tr><td><input type="hidden" name="on0" value="Subscriptions">Subscriptions</td></tr><tr><td><select name="os0">
-	<option value="1 Month(s)">1 Month(s) $7.00 USD</option>
-	<option value="3 Month(s)">3 Month(s) $15.00 USD</option>
-	<option value="Lifetime">Lifetime $20.00 USD</option>
+<tr><td><input type="hidden" name="on0" value="Eggster Subscriptions">Eggster Subscriptions</td></tr><tr><td><select name="os0">
+	<option value="1 Month(s)">1 Month(s) $7,00 USD</option>
+	<option value="3 Month(s)">3 Month(s) $15,00 USD</option>
+	<option value="Lifetime">Lifetime $20,00 USD</option>
 </select> </td></tr>
 </table>
 <input type="hidden" name="currency_code" value="USD">
