--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@ title: Home
 </center>
 
 <div class="container">
-	<img src="/assets/img/PNGCOG.png" class="home-hotdog"><p>Hotdogger</p>
+	<img src="/assets/img/PNGCOG.png" class="home-hotdog"><p>Eggster Club</p>
 </div>
